--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/uuid": "^8.3.3",
     "jest": "^27.4.4",
     "ts-jest": "^27.1.1",
     "ts-node-dev": "^1.1.8",
